# netbox-resourcemanagement

./: AGENTS.md  README.md  add_color_methods.py  assign_permission.py  pyproject.toml  run_migrations.py  执行配置反馈.md  核查内容.md
.agent/workflows/: runtime.md
netbox_rms/: __init__.py  choices.py  filtersets.py  forms.py  mixins.py  models.py  navigation.py  signals.py  tables.py  urls.py  views.py
netbox_rms/api/: __init__.py  serializers.py  urls.py  views.py
netbox_rms/migrations/: 0001_initial.py  0002_remove_serviceorder_customer_name_and_more.py  0003_serviceorder_business_manager_and_more.py  0004_remove_serviceorder_internal_participants_and_more.py  0005_add_resource_check_fields.py  0006_alter_serviceorder_options.py  0007_alter_serviceorder_options.py  0008_alter_serviceorder_options_and_more.py  0009_remove_serviceorder_project_code_and_more.py  0010_remove_serviceorder_start_date.py  0011_rename_comments_resourcecheckresult_description.py  0012_remove_taskdetail_bandwidth_and_more.py  0013_taskdetail_assignee.py  0014_migrate_task_types.py  0015_alter_taskdetail_task_type.py  0015_remove_lifecycle_status.py  0016_merge_20260107_1543.py  0017_taskdetail_execution_department.py  0018_taskdetail_feedback_data.py  __init__.py
netbox_rms/static/netbox_rms/css/: rms.css
netbox_rms/templates/netbox_rms/: resourceledger.html  resourceledger_list.html  serviceorder.html  serviceorder_edit.html  serviceorder_list.html  taskdetail.html  taskdetail_edit.html  taskdetail_list.html
