[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-rms"
version = "0.1.0"
description = "NetBox 传输资源管理系统插件"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "NetBox RMS Team", email = "admin@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/example/netbox-rms"
"Bug Tracker" = "https://github.com/example/netbox-rms/issues"

[tool.setuptools.packages.find]
include = ["netbox_rms*"]
